--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ header {
   justify-content: space-around;
   text-align: center;
   height: 100%;
+  padding-bottom: 0px;
 }
 
 #logo {
@@ -104,7 +105,7 @@ header {
 
 #input {
   width: 400px;
-  height: 40px;
+  height: 35px;
   border-radius: 10px;
   border: 0.5px solid #D3D3D3;
   background-color: linear-gradient(to right, #4f46e5, #7c3aed, #4338ca);
