--- a/src/index.css
+++ b/src/index.css
@@ -33,11 +33,11 @@ header {
   width: 100%;
   height: 1080px;
   background: linear-gradient(135deg, 
-    #f8fafc 0%, 
-    #e0e7ff 25%, 
-    #dbeafe 50%, 
-    #c7d2fe 75%, 
-    #e0e7ff 100%
+    #cbd5e1 0%, 
+    #cbd5e1 25%, 
+    #cbd5e1 50%, 
+    #cbd5e1 75%, 
+    #cbd5e1 100%
   );
   background-size: 400% 400%;
   animation: shimmer 8s ease-in-out infinite;
@@ -50,7 +50,8 @@ header {
   margin: 0 auto;
   align-items: center;
   box-sizing: border-box;
-  padding: 0px 30px;
+  padding: 0px 50px;
+  position: relative;
   display: flex;
   justify-content: space-between;
   text-align: center;
@@ -60,19 +61,21 @@ header {
 
 #logo {
   font-family: 'SF-Pro', sans-serif;
-  font-size: 32px;
+  font-size: 30px;
   font-weight: 900;
-  background-image: linear-gradient(to right, #4f46e5, #7c3aed, #4338ca);
+  position: relative;
+  margin-right: 920px;
+   background: linear-gradient(90deg, #1e293b, #374151, #1e293b);
   -webkit-background-clip: text;
   background-clip: text;
-  -webkit-text-fill-color: transparent;
   color: transparent;
   cursor: pointer;
+  flex-shrink: 0;
 }
 
 #button {
   font-family: 'SF-Pro', sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   color: #FFFFFF;
   font-weight: 450;
   width: 100px;
@@ -80,7 +83,7 @@ header {
   border-radius: 12px;
   border: none;
   cursor: pointer;
-  background: linear-gradient(to right, #4f46e5, #7c3aed);
+  background: linear-gradient(to right, #1e293b, #334155);
   transition: all 0.515s ease;
 }
 
@@ -111,8 +114,8 @@ header {
 #sign:hover {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
   transform: scale(1.05);
-  color: #4338ca;
-  background-color: #c7d2fe;;
+  color: #FFFFFF;
+  background-color: #374151;;
 }
 
 #input {    
@@ -141,8 +144,15 @@ header {
 }
 
 #area {
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   border-radius: 10px;
-  background: linear-gradient(to right, #4f46e5, #7c3aed);
+  background: #0f172a;
 }
+
+#input-container {
+  position: relative;
+  margin-right: 0px;
+}
+
+
