--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: 'SF-Pro';
-  src: url(./San\ Francisco\ Pro\ Display/SF-Pro-Display-Regular.otf) format('opentype');
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 *, *::before, *::after {
@@ -80,7 +77,7 @@ header {
   color: #FFFFFF;
   font-weight: 450;
   width: 100px;
-  height: 40px;
+  height: 40px; 
   border-radius: 12px;
   border: none;
   cursor: pointer;
@@ -120,9 +117,9 @@ header {
 }
 
 #input {    
-  font-family: 'SF-Pro-Display-Regular', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 400;
   color: #000;
   padding: 20px; 
   width: 100%;
@@ -135,6 +132,8 @@ header {
 }
 
 #input::placeholder {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
   color: #71717a; 
   opacity: 1; 
 }
