--- a/src/css-components/TextMain.css
+++ b/src/css-components/TextMain.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 *, *::before, *::after {
     margin: 0;
     padding: 0;
@@ -15,6 +13,10 @@ body {
     font-family: 'Poppins', sans-serif !important;
 }
 
+.h1, .future, .description, .description {
+    font-family: 'Poppins', sans-serif  ;
+}
+
 .text-overlay {
     max-width: 1440px;
     width: 100%;
@@ -26,7 +28,7 @@ body {
     top: 15%;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 1000;
+    z-index: 5;
 }
 
 #drive {
