--- a/src/css-components/TextMain.css
+++ b/src/css-components/TextMain.css
@@ -7,9 +7,7 @@
 }
 
 body {
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -33,9 +31,9 @@ html {
 }
 
 #drive {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 50px;
-    font-weight: 500;
+    font-weight: 400;
     color: #1e293b;
     opacity: 0;
     animation: fadeInUp 1s ease-out 0.5s forwards;
