--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 *, *::before, *::after {
     margin: 0;
@@ -7,9 +7,7 @@
 }
 
 body {
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -82,7 +80,7 @@ header {
 }
 
 #logo {
-  font-family: 'Poppins', sans-serif; 
+  font-family: 'Roboto', sans-serif; 
   font-size: 25px;
   font-weight: 600;
   position: relative;
@@ -96,7 +94,7 @@ header {
 }
 
 #button {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 500;
   color: #FFFFFF;
@@ -123,7 +121,7 @@ header {
 #sign {
   border-radius: 12px;
   border: none;
-  font-family: 'Poppins', sans-serif; 
+  font-family: 'Roboto', sans-serif; 
   font-size: 17px;
   font-weight: 500;
   width: 100px;
@@ -142,7 +140,7 @@ header {
 }
 
 #input {    
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-weight: 400;
   color: #000;
@@ -157,7 +155,7 @@ header {
 }
 
 #input::placeholder {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   color: #71717a; 
   opacity: 1; 
